Closed Bug 234763 Opened 21 years ago Closed 21 years ago

crashes by import of bookmark.

Categories

(Camino Graveyard :: Bookmarks, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino0.8

People

(Reporter: sugar.waffle, Assigned: mikepinkerton)

Details

Attachments

(1 file)

User-Agent: Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; ja-JP; rv:1.7a) Gecko/20040217 Camino/0.7+ It crashes, when bookmark which contains very long URL like bookmarklet is imported. Import of bookmark was performed by being the thing of firefox. bookmarklet has registered the following into bookmark of firefox in advance. http://www.remus.dti.ne.jp/~a-satomi/bunsyorou/Camino_benriSet/Camino_benriSet_168.tar.gz Reproducible: Always Steps to Reproduce: 1.Select "Import bookmarks..." 2.Mozilla Firebird is chosen from a browser selection list. 3.The Import button is pushed. Actual Results: It crashes. Expected Results: bookmark is imported.
Attached file Crash log
yet another crash, i'm gonna ifdef-out the code until we can get to it, probably after 0.9
Summary: crashes by import of bookmark. → [CLICKHOLD] crashes by import of bookmark.
heehee, wrong bug :)
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Summary: [CLICKHOLD] crashes by import of bookmark. → crashes by import of bookmark.
Target Milestone: --- → Camino0.8
ok, i was able to fix this. It's got nothing at all to do with long urls, but one of the bookmarklets has an embedded <a></a> in it and that throws the parser for a HUGE loop. I was able to make it not crash and recover and get the rest of the file, but that one bookmarklet is lost and we just can't import it. I think that's a reasonable compromise. i'll file a new bug that we can't import bookmarklets with <a> in them.
fixed, and as an added bonus, we're now correctly importing shift_jis-encoded bookmark files :)
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
It came to be able to perform import of bookmark normally. thanks for quick work!! Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; rv:1.7a) Gecko/20040219 Camino/0.7+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: