fix crash importing moz bookmarks when a bookmarklet has an embedded <a> tag. Bail and don't import that one bookmark. Recognize shift_jis encoding in bookmark files (bug 234763)